# ckplotlib

./: .gitignore  README.md  ckplot.py  color.py  pyproject.toml  tool.py
config_example/: config.ini
src/ckplotlib/: __init__.py  _version.py  ckplot.py  color.py  cycle.py  savecsv.py  savefig.py  ticker.py
src/ckplotlib/config/: __init__.py  config.ini
src/ckplotlib/mplstyle/: __init__.py
tests/: ckplotcsvtest.py  ckplotfonttest.py  ckplottest.py  cksubplottest.py
