[project]
name = "ckplotlib"
version = "0.0.0"
description = "Add-on library of Matplotlib for publication quality plots"
authors = ["Masaya Chizaki"]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = "=>3.10"
dependencies = [
    "numpy >= 1.20",
    "matplotlib >= 3.8",
    "pandas >= 2.0",
]
dynamic = ["version"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "ckplotlib.__version__.version"}

[tool.setuptools_scm]
write_to = "src/ckplotlib/__version__.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
