[project]
name = "ckplotlib"
authors = [{name = "Masaya Chizaki"}]
description = "Add-on library of Matplotlib for publication quality plots"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "ckplotlib.version"}

[tool.setuptools_scm]
write_to = "src/ckplotlib/__version__.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[build-system]
requires = ["setuptools", "setuptools_scm"]
