[project]
name = "ckplotlib"
authors = [{name = "Masaya Chizaki"}]
description = "Add-on library of Matplotlib for publication quality plots"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas"
]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "ckplotlib.version"}

[tool.setuptools_scm]
write_to = "src/ckplotlib/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[build-system]
requires = ["setuptools", "setuptools_scm"]
